--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,6 @@
   <body>
     <div id="root"></div>
   </body>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0" nonce="Z2eWyjMp"></script>
 </html>
