--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,14 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Yeoman Race Engines</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+
   </head>
   <body>
     <div id="root"></div>
   </body>
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0" nonce="Z2eWyjMp"></script>
+  
+  
 </html>
